# ml-zoomcamp

./: .gitignore  .markdownlint.yaml  README.md  flake.nix
01-intro/: pyproject.toml
01-intro/homework/: notebook.ipynb  notebook.md  pyproject.toml
02-regression/: pyproject.toml
02-regression/homework/: regression.md
03-classification/: pyproject.toml
03-classification/homework/: classification.md
04-evaluation/: pyproject.toml
04-evaluation/homework/: evaluation.md
