[project]
description = "Week 2 - Regression"
readme = "README.md"
requires-python = ">=3.11"
name = "ml-zoomcamp-regression"
version = "0.1.0"
dependencies = [
  "ipykernel>=6.30.1",
  "matplotlib>=3.10.6",
  "notebook>=7.4.7",
  "numpy>=2.3.3",
  "pandas>=2.3.3",
  "pandas-stubs==2.3.2.250926",
  "scikit-learn>=1.7.2",
  "seaborn>=0.13.2",
]
